# gogl-cback

./: .gitignore  CMakeLists.txt  gogl-cbackend.sublime-project
glad/include/glad/: gl.h
glad/src/: gl.c
src/: bindings.c  bindings.h  glad.c  glad.h  glfw.c  glfw.h  macros.h  main.c  std.c  std.h
